--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "unpkg": "dist/datapay.min.js",
   "dependencies": {
+    "axios": "0.19.1",
     "bitcore-explorers": "^1.0.1",
     "buffer": "^5.2.1",
     "mingo": "^2.2.4"
@@ -31,6 +32,7 @@
   "devDependencies": {
     "dotenv": "^6.2.0",
     "mocha": "^5.1.1",
+    "prettier": "1.19.1",
     "uglify-es": "^3.3.9"
   }
 }
